<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/thirdTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="56dp"
        android:text="@string/thirdTitle"
        android:textAlignment="center"
        android:textSize="36sp"
        android:padding="20dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/thirdText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/thirdText"
        android:textAlignment="center"
        android:textSize="24sp"
        android:padding="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/thirdTitle" />

    <Button
        android:id="@+id/continueButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="161dp"
        android:layout_marginEnd="162dp"
        android:layout_marginBottom="95dp"
        android:background="#4fc4e9"
        android:elevation="0dp"
        android:fontFamily="sans-serif"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:text="@string/continueText"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="420dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_gravity="center_horizontal"
        app:layout_constraintTop_toBottomOf="@+id/thirdText">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="20dp">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="0px"
                android:layout_height="90dp"
                android:layout_weight="0.3"
                app:srcCompat="@drawable/high_voltage_wires"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="216dp" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="0px"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_weight="0.7"
                android:paddingTop="20dp"
                android:text="@string/highVoltageWireText"
                android:textAlignment="center"
                android:textSize="18sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:padding="20dp">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="0px"
                android:layout_height="101dp"
                android:layout_weight="0.3"
                app:srcCompat="@drawable/high_voltage_wire_nuts"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="330dp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="0px"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_weight="0.7"
                android:paddingTop="20dp"
                android:text="@string/highVoltageWireNutText"
                android:textAlignment="center"
                android:textSize="18sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="20dp">

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="0px"
                android:layout_height="109dp"
                android:layout_weight="0.3"
                app:srcCompat="@drawable/high_voltage_warnings"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="444dp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="0px"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_weight="0.7"
                android:paddingTop="20dp"
                android:text="@string/highVoltageWarningText"
                android:textAlignment="center"
                android:textSize="18sp" />
        </TableRow>

    </TableLayout>

</android.support.constraint.ConstraintLayout>